fix: change background shift point

--- a/src/styles/components/background/_background.scss
+++ b/src/styles/components/background/_background.scss
@@ -16,7 +16,7 @@
 
 @keyframes slide {
   0% {
-    transform: translate3d(0, -130rem, 0);
+    transform: translate3d(0, -260rem, 0);
   }
   100% {
     transform: translate3d(0, 0, 0);
